--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image" href="/src/assets/favicon.png" />
+  <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IP Locate</title>
+	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+  <title>IP Address Tracker</title>
 </head>
 
-<body>
+<body class='bg-cover bg-top bg-no-repeat bg-main'>
   <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="/src/index.tsx"></script>
 </body>
 
 </html>
