--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>IP Address Tracker</title>
 </head>
 
-<body class='bg-cover bg-top bg-no-repeat bg-main'>
+<body class='bg-main bg-no-repeat bg-cover bg-top'>
   <div id="root"></div>
   <script type="module" src="/src/index.tsx"></script>
 </body>
