--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
+  <link rel="icon" type="image/png" href="/src/assets/images/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap" rel="stylesheet">
 
+	<link 
+		rel="stylesheet" 
+		href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+    integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+    crossorigin=""
+	/>
+	
   <title>IP Address Tracker</title>
 </head>
 
