--- a/index.html
+++ b/index.html
@@ -3,20 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/src/assets/images/favicon.png" />
+  <link rel="icon" type="image/png" href="/src/images/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-	<link 
-		rel="stylesheet" 
-		href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-    integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
-    crossorigin=""
-	/>
 	
   <title>IP Address Tracker</title>
 </head>
 
-<body class='bg-main bg-no-repeat bg-cover bg-top'>
+<body>
   <div id="root"></div>
   <script type="module" src="/src/index.tsx"></script>
 </body>
