--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
-  <title>IP Address Tracker</title>
+  <title>Nodirbek's ip address</title>
 </head>
 
 <body>
